[React-movie-rater-web] 63.First POST method

--- a/react_part/movie-rater-web/src/App.css
+++ b/react_part/movie-rater-web/src/App.css
@@ -9,6 +9,23 @@
 
 .layout {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   text-align: left;
+}
+
+.orange {
+  color: orange;
+}
+
+.purple {
+  color: purple;
+}
+
+.rate-container {
+  border-top: 2px solid purple;
+}
+
+.rate-container span.fa {
+  font-size: 2em;
+  cursor: pointer;
 }
