--- a/react_part/movie-rater-web/src/App.css
+++ b/react_part/movie-rater-web/src/App.css
@@ -11,6 +11,7 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
   text-align: left;
+  grid-gap: 20px;
 }
 
 .orange {
@@ -28,4 +29,15 @@
 .rate-container span.fa {
   font-size: 2em;
   cursor: pointer;
+}
+
+.movie-item{
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+}
+
+.movie-item span{
+  font-size: 1.2em;
+  margin: 16px 5px;
+
 }
